<resources>
    <string name="app_name">Calorie Counter</string>
    <string name="main_monday">Lundi</string>
    <string name="main_tuesday">Mardi</string>
    <string name="main_wednesday">Mercredi</string>
    <string name="main_thursday">Jeudi</string>
    <string name="main_friday">Vendredi</string>
    <string name="main_saturday">Samedi</string>
    <string name="main_sunday">Dimanche</string>
    <string name="calories">Calories</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="veggies">Légumes</string>
    <string name="healthy_fats">Graisses saines</string>
    <string name="oils">Huiles</string>
    <string name="carbohydrate">Glucides</string>
    <string name="fruits">Fruits</string>
    <string name="proteins">Protéines</string>
    <string name="protein">Protéine</string>
    <string name="breakfast">Petit Déjeuner</string>
    <string name="lunch">Déjeuner</string>
    <string name="day_cal">Cal</string>
    <string name="day_fat">Fat</string>
    <string name="day_carb">Carb</string>
    <string name="day_prot">Prot</string>
    <string name="dinner">Dîner</string>
    <string name="snack">Snack</string>
    <string name="bmr_calculator">Calcul BMR &amp; calories/jour</string>
    <string name="gender">Genre</string>
    <string name="male">homme</string>
    <string name="female">femme</string>
    <string name="age">Age</string>
    <string name="height">Taille</string>
    <string name="weight">Poids</string>
    <string name="centimeter">cm</string>
    <string name="kilogram">kg</string>
    <string name="calculate_bmr">Calculer BMR</string>
    <string name="your_bmr_is">BMR de base :</string>
    <string name="sedentary">Sédentaire (Aucune activité physique)</string>
    <string name="exercice_1_3_times">Faiblement actif (Activités physiques 1-3 fois)</string>
    <string name="exercice_4_5_times">Moyennement actif (Activités physiques 4-5 fois)</string>
    <string name="exercice_6_8_times">Très actif (Activités physiques 6-8 fois)</string>
    <string name="exercice_very_intense">Extrêmement actif (Activités physiques +10 fois)</string>
    <string name="daily_calorie">Nombre de calories par jour :</string>
    <string name="calculate_daily_calorie">Calculer Cal/jour</string>
    <string name="fat">Fat</string>
    <string name="prot">Prot</string>
    <string name="carb">Carb</string>
    <string name="percent">%</string>
    <string name="gram">g</string>
    <string name="calculate_macro">Calculer macro</string>
    <string name="search">Recherche</string>
    <string name="food">Aliment</string>
    <string name="name">Nom</string>
    <string name="category">Catégorie</string>
    <string name="calorie">Calorie</string>
    <string name="nutrition_facts_100g">Valeur nutritive (100g)</string>
    <string name="food_example">Blanc de poulet, Carottes, ...</string>
    <string name="_100">100</string>
    <string name="save_btn">save_btn</string>
    <string name="note">Note</string>
    <string name="calorie_gram_symbol">Calories (g)</string>
    <string name="fat_gram_symbol">Lipides (g)</string>
    <string name="carb_gram_symbol">Glucides (g)</string>
    <string name="prot_gram_symbol">Protéines (g)</string>
    <string name="weight_gram_symbol">Poids (g)</string>
    <string name="note_symbol">Note...</string>
    <string name="monday_cap">Lundi</string>
    <string name="tuesday_cap">Mardi</string>
    <string name="wednesday_cap">Mercredi</string>
    <string name="thursday_cap">Jeudi</string>
    <string name="friday_cap">Vendredi</string>
    <string name="saturday_cap">Samedi</string>
    <string name="sunday_cap">Dimanche</string>
    <string name="breakfast_cap">Petit Déjeuner</string>
    <string name="lunch_cap">Déjeuner</string>
    <string name="dinner_cap">Dîner</string>
    <string name="snack_cap">Snack</string>
    <string name="profile_saved">Profil sauvegardé</string>
    <string name="food_saved">Aliment sauvegardé</string>
    <string name="error_add_value">Ajouter valeur</string>
    <string name="add_food">Ajouter aliment</string>
    <string name="search_food">Rechercher aliment</string>
    <string name="choose_category">Choisir catégorie</string>
    <string name="filter_btn">filter_btn</string>
    <string name="sort_by_category">Trier par Catégorie</string>
    <string name="sort_by_name">Trier par Nom</string>
    <string name="new_food">Nouvel aliment</string>
    <string name="change_value_title">Changer le poids de :</string>
    <string name="change_weight">Changer le poids</string>
    <string name="weight_replace">Poids remplacé</string>
    <string name="successfully_remove_food">Aliment retiré : %1$s</string>
    <string name="successfully_add_food">Aliment ajouté : %1$s</string>
    <string name="delete_alert_dialog_question">Êtes-vous sûr de vouloir supprimer \'%1$s\' de la base de donnée?</string>
    <string name="undo_snackbar">Annuler</string>
    <string name="custom_calorie_saved">Calories personnalisées sauvegardé</string>
    <string name="yes_alert_dialog">Oui</string>
    <string name="no_alert_dialog">Non</string>
    <string name="title_alert_dialog">Supprimer aliment</string>
    <string name="food_updated">Aliment actualisé</string>
    <string name="food_added">Aliment ajouté</string>
</resources>