<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/meal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/monday"
        style="@style/MainTitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_monday"
        app:layout_constraintBottom_toTopOf="@+id/tuesday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tuesday"
        style="@style/MainTitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_tuesday"
        app:layout_constraintBottom_toTopOf="@+id/wednesday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monday" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wednesday"
        style="@style/MainTitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_wednesday"
        app:layout_constraintBottom_toTopOf="@+id/thursday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuesday" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/thursday"
        style="@style/MainTitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_thursday"
        app:layout_constraintBottom_toTopOf="@+id/friday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wednesday" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/friday"
        style="@style/MainTitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_friday"
        app:layout_constraintBottom_toTopOf="@id/saturday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thursday" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/saturday"
        style="@style/MainTitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_saturday"
        app:layout_constraintBottom_toTopOf="@+id/sunday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friday" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sunday"
        style="@style/MainTitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_sunday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saturday" />


</androidx.constraintlayout.widget.ConstraintLayout>